2000-03-18  James Henstridge  <james@daa.com.au>

	* gtk/gtkobject-support.c (pygtk_{enum,flag}_get_value): fix bug where
	having default enum/flag arguments would cause a crash if the argument
	was not specified.

	* codegen/h2def.py (write_func): fixed bug for finding methods where
	there is just the object argument.

2000-03-03  James Henstridge  <james@daa.com.au>

	The following is from Paul Clifford <paul@plasma.demon.co.uk>

	* libglade.py (GladeXML.signal_autoconnect): pass all the extra
	arguments to autoconnect.

	* libglademodule.c (connect_many): don't exit if the handler is
	a tuple instead of a function.

	The following fixes are from John Ehresman <jpe@archaeopteryx.com>
	
	* gtk.py (GtkWidget.set_scroll_adjustments): return the value to
	user.

	* gtkmodule.c (GtkArg_AsPyObject): check if GtkObject is not NULL.
	(_wrap_gtk_clist_get_pixmap, _gtk_clist_get_pixtext): check that
	returned pixmap is not NULL.
	(_wrap_gtk_ctree_node_get_pixmap, _gtk_ctree_node_get_pixtext): check
	that returned pixmap is not NULL.

	* gtk.py (GtkToolbar): wrap callbacks when inserting a toolbar item.
	(GtkNotebook.set_menu_label_text): fixed typo
	(GtkTreeItem.__getattr__): wrap subtree attribute.

2000-02-21  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkTable.resize): added missing function.  Patch from
	wrobell <wrobell@posexperts.com.pl>.

	* generate/gtkcontainers.defs (gtk_table_resize): added missing
	function.

2000-02-20  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkCList.get_[hv]adjustment): apply fix from Martin
	Preishuber.

2000-02-16  James Henstridge  <james@daa.com.au>

	* configure.in, pygtk.spec: updated version to 0.6.4

2000-01-27 Elliot Lee <sopwith@redhat.com>
	* gtk.py: s/sel/self/ in GtkSpinButton.get_adjustment()

2000-01-26  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkObject.__hash__): use C level GtkObject for hash
	function.
	(GtkAccelGroup.__cmp__): use C level object for comparisons.