@@ -1,6 +1,10 @@
 Makefile
 Makefile.in
+*.o
+*.lo
 *.la
+*.so
 .libs
 .deps
-
+*.pyc
+*.pyo
