@@ -1,0 +1,10 @@
+# -*- Mode: Python; py-indent-offset: 4 -*-
+
+# load the required modules:
+from GTK import *
+import GDK
+from _gtk import *
+
+# for importing ...
+__all__ = ['_gtk', 'GTK', 'GDK' ]
+
