@@ -1,3 +1,11 @@
+2000-03-23  James Henstridge  <james@daa.com.au>
+
+	* codegen/override.py: simple module for parsing a file containing
+	names of ignored functions and overriden implementations.
+
+	* gtk/__init__.py: add an __init__ module so the gtk directory acts
+	like a package.
+
 2000-03-18  James Henstridge  <james@daa.com.au>
 
 	* gtk/gtkobject-support.c (pygtk_{enum,flag}_get_value): fix bug where
